fixing dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #213547; /* changed */
+  background-color: #ffffff; /* changed */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -59,10 +59,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: rgba(255, 255, 255, 0.87); /* changed */
+    background-color: #242424; /* changed */
   }
   a:hover {
     color: #747bff;
